// Vitest Snapshot v1

exports[`svelte-preprocess-react > should inject a script tag 1`] = `
"<script>
import sveltifyReact from \\"svelte-preprocess-react/sveltifyReact18\\";

const React$Counter = sveltifyReact(Counter);
</script>

<!-- Counter could be a global variable -->
<React$Counter />
"
`;

exports[`svelte-preprocess-react > should process <react:component> tags 1`] = `
"<script>import sveltifyReact from \\"svelte-preprocess-react/sveltifyReact18\\";
  // @ts-nocheck
  import Clicker from \\"./Clicker\\";

  let count = 1;
const React$Clicker = sveltifyReact(Clicker);</script>

<React$Clicker
  {count}
  onCount={(next) => {
    count = next;
  }}
/>
"
`;

exports[`svelte-preprocess-react > should process <react:component> tags 2`] = `
"<script>import sveltifyReact from \\"svelte-preprocess-react/sveltifyReact18\\";
  // @ts-nocheck
  import Clicker from \\"./Clicker\\";

  let count = 1;
const React$Clicker = sveltifyReact(Clicker);</script>

<h2>prop and event</h2>
<React$Clicker
  {count}
  onCount={(next) => {
    count = next;
  }}
/>
<h2>prop and Prop event</h2>
<React$Clicker
  count={10}
  onCount={() => {
    console.info(\\"count\\");
  }}
/>
<h2>prop</h2>
<React$Clicker {count} />
<h2>.</h2>
<React$Clicker />
"
`;

exports[`svelte-preprocess-react > should support typescript when using preprocess 1`] = `
"<script lang=\\"ts\\">export let title;
</script>

<h1>{title}</h1>
"
`;
